# pomona

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.cursor/rules/: pomona.mdc
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
datasets/: README.md  registry.yaml
datasets/interim/: README.md
datasets/pomona-actuator-command-gate-v0.1/: DATASET_CARD.md  README.md
datasets/pomona-safety-triage-v0.1/: DATASET_CARD.md  README.md
datasets/pomona-sensor-quality-v0.1/: DATASET_CARD.md  README.md
datasets/pomona-tomato-risk-v0.1/: CITATION.cff  DATASET_CARD.md  LICENSES.md  README.md
datasets/pomona-water-irrigation-risk-v0.1/: DATASET_CARD.md  README.md
datasets/processed/: README.md
datasets/raw/: README.md
datasets/sources/: 4tu_autonomous_greenhouse_challenge.yaml  README.md  pomona_generated_safety_templates.yaml  purdue_whin_soil_weather.yaml  (+2 more)
docs/: ACTUATOR_COMMAND_GATE_REASONER.md  CURSOR_RULES.md  DATASET_STRATEGY.md  EXECUTION_PLAN.md  GETTING_STARTED.md  GITHUB.md  HF_USAGE.md  INSTALL.md  LICENSE_AND_ATTRIBUTION.md  MODEL_STANDARD.md  MULTI_REPO.md  PHASES.md  PLUG_AND_PLAY.md  PROJECT_STATUS.md  PUBLISHING.md  README.md  REPOS.md  ROADMAP.md  SAFETY_TRIAGE_REASONER.md  SENSOR_QUALITY_REASONER.md  SMALL_MODEL_FACTORY.md  SMALL_TOMATO_GROWING_HARDWARE_CART.md  TOMATO_RISK_REASONER.md  UNPUBLISHED_MODEL_RELEASES.md  VERSIONING.md  WATER_IRRIGATION_RISK_REASONER.md  architecture.md
models/: README.md
private/: README.example.md
scripts/: check-prerequisites.sh  down.sh  run-local.sh  setup.sh  sim.sh  up.sh
(+114 files in other folders)
